# yuHai-ui

./: .editorconfig  .env  .env.development  .env.production  .gitignore  .prettierignore  .prettierrc  .stylelintignore  LICENSE  README.md  eslint.config.mjs  index.html  latest.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: manual_build.yml  release.yml
page/: .env.example  _worker.js  config.js  console.html  index.html  main.js  package-lock.json  package.json  schema-api-keys.sql  sitemap.xml  style.css  test-api-keys.js  wrangler.toml
page/functions/: _middleware.js
page/functions/api/: _middleware.js  api-keys-manage.js  api-keys.js  example.js  user-data.js
page/functions/lib/: api-key-manager.js
scripts/: clean-dev.ts  run-with-version.js
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: browser_sync.rs  core_manager.rs  core_update.rs  main.rs
src/api/: dashboard.ts  system.ts
src/api/automation/: account.ts  comment.ts  note.ts  proxy.ts  task.ts
src/assets/styles/: index.scss
src/assets/svg/: loading.ts
src/components/: TaskStatusMonitor.vue
src/composables/: useUpdateManager.ts
src/config/: index.ts  setting.ts
src/directives/: index.ts
src/enums/: appEnum.ts  formEnum.ts
src/hooks/: index.ts
src/locales/: index.ts
src/plugins/: echarts.ts
src/router/: index.ts
src/store/: index.ts
src/types/: components.d.ts  index.ts
src/utils/: download.ts  index.ts  logger.ts  progress.ts  router.ts
(+143 files in other folders)
