[package]
name = "yuHai"
version = "0.0.0"
description = "A Tauri App"
authors = ["xingGuang"]
edition = "2021"
default-run = "yuHai"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
dotenv = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.28", features = ["json", "stream", "blocking"] }
sha2 = "0.10.9"
hex = "0.4.3"
futures-util = "0.3.31"
chrono = "0.4.42"
regex = "1.12.2"
semver = "1.0.27"
tokio = { version = "1.48.0", features = ["full"] }
zip = "0.6"

[[bin]]
name = "yuHai"
path = "src/main.rs"


